# marchmadnessapp2026

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  refresh.yml
dashboard/: app.py
dashboard/api/: main.py
dashboard/frontend/: README.md  index.html  vite.config.js
dashboard/frontend/src/: App.css  App.jsx  index.css
dashboard/frontend/src/components/: AdamsPicks.jsx  Bracket.jsx  BracketESPN.jsx  ErrorBoundary.jsx  ExportPicks.jsx  GameRow.jsx  ModelPicks.jsx  OddsTable.jsx
data/raw/: bracket_2026.example.json  bracket_2026.json
deploy/: nginx-bare.conf  nginx-domain.conf  nginx-host-ssl.conf.example  nginx.conf
deploy/scripts/: deploy.sh  refresh.sh
deploy/systemd/: march-madness-api.service
docs/: deploy.md
frontend-dist/: .gitignore  index.html
scripts/: build_full_bracket.py  download_kaggle_data.py  ingest_history.py  refresh.py  wire_actual_matchups.py
src/march_madness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mm/: __init__.py  config.py
src/mm/bracket/: __init__.py  official_bracket.py  simulate.py
src/mm/data/: __init__.py  kaggle_loader.py  sports_reference.py  validate_schema.py
src/mm/features/: __init__.py  build_matchups.py
src/mm/models/: __init__.py  train.py  tune.py  validate.py
src/mm/odds/: __init__.py  overtime.py
src/mm/value/: __init__.py  recommendations.py
tests/: __init__.py  test_api.py  test_bracket.py  test_data_pipeline.py  test_recommendations.py  test_simulate.py
