[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "march-madness"
version = "0.1.0"
description = "NCAA March Madness bracket prediction with XGBoost and odds comparison"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "March Madness Predictor" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "requests>=2.28",
    "streamlit>=1.28",
    "pyarrow>=14.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
]
kaggle = [
    "kaggle>=1.5",
]

[project.scripts]
mm-train = "mm.models.train:main"
mm-validate = "mm.models.validate:main"
mm-simulate = "mm.bracket.simulate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
